--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,12 @@
-// Remove vercel.json from root
-// In frontend folder, add vercel.json:
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "devCommand": "npm start",
+  "version": 2,
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/build",
   "framework": "create-react-app",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://your-backend-api.vercel.app/api/:path*"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
