--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/build",
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "build",
   "framework": "create-react-app",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
